updated prompt